--- a/DesignDocument/results.tex
+++ b/DesignDocument/results.tex
@@ -27,6 +27,7 @@ keine Unterst"utzung; es ist nicht direkt ersichtlich, welche
 Dateien gebraucht werden und welche nicht.
 
 Zum Zeitpunkt der Abgabe besteht der Prototyp aus folgenden Komponenten:
+
 \begin{itemize}
 	\item Hauptmen"u
 	\item Levelauswahlmen"u
@@ -76,6 +77,11 @@ verwendet werden sollen.
 Die teilweise verteilte Entwicklung und die gelegentlichen R"uckschritte
 betonten die Notwendigkeit f"ur ein (ebenfalls verteiltes!)
 Versionskontrollsystem\footnote{Subversion est mort. Vive Git!}.
+
+Insgesamt haben wir feststellen m"ussen das die Spiele Entwicklung ein sehr kreativer Prozess ist. Der eigentlichen Implementierung geht ein langer Zeitraum kreativen schaffens zuvor in welchem grundlegende Ideen entwickelt und ausgearbeitet werden.
+
+Unsere gr"o"ste H"urde in diesem Prozess war die Findung einer Spielidee. Wir mussten dabei darauf achten das die Spielidee nicht zu einfach, nicht zu schwer und nebenbei noch interessant ist.
+
 %
 \subsection{Ausblick}
 \label{sec:results/future}
@@ -86,18 +92,9 @@ Verbesserungsm"oglichkeiten und Erweiterungspotential:
 \begin{itemize}
 	\item
 		mehr Feedback f"ur den Benutzer (``Game Over''-Bildschirm etc.)
-	\item
-		qualitativere Modelle
-	\item
-		``Umsehen''-Funktion, um einen "Uberblick "uber die Karte
-		zu erhalten
-	\item
-		mehr Puzzlecharakter f"ur die Levels
-	\item Bessere Animationen: Obwohl unsere momentane Animationen funktionieren, gibt es auch hier viel
-		Raum f"ur Verbesserungen, zum einen durch bessere Aufnahmen und zum anderen durch bessere Anpassung
-		der Animationen an unseren Avatar und aneinander (zum Beispiel bessere "Uberg"ange zwischen
-		Animationszust"anden).
-	\item Bessere Kamerasteuerung: Im Moment ist einer der Hauptschwierigkeitsfaktoren unseres Spiels die
-		Tatsache, dass die Kamerasteuerung sehr ungelenk ist. Zu w"unschen w"are hier eine freie Kamerasteuerung,
-		damit sich der Spieler auf das Level und den Weg zum Ziel konzentrieren kann.
+	\item Bessere Animationen : Obwohl unsere momentane Animationen funktionieren, gibt es auch hier viel raum f"ur Verbesserungen. Zum einen durch bessere Aufnahmen und zum anderen durch bessere Anpassung der Animationen an unseren Avatar und aneinander (zum Beispiel bessere "Uberg"ange zwischen Animationszust"ande)
+	\item Bessere Kamerasteuerung : Im Moment ist einer der Hauptschwierigkeitsfaktoren unseres Spiels die Tatsache, dass die Kamerasteuerung sehr ungelenk ist. Zu w"unschen w"are hier eine freie Kamerasteuerung damit sich der Spieler auf das Level und den Weg zum Ziel konzentrieren kann
+	\item Besseres Level Design : Das momentane Level Design ist sehr einfach und k"onnte noch deutlich verbessert werden
+	\item Mehr Spielkonzepte : Im Moment dreht sich das gesamte Spiel um die Schwerkraftmanipulation. Durch das Einbauen neuer Spielkonzepte (zum Beispiel Gegner, Fallen, etc...) wurde sich der Focus verteilen und damit abwechslungsreicheres Level Design erm"oglichen
+	\item Optimierte Schwerkraft"anderung : Zur Zeit gehen beim Schwerkraftwechsel s"amtliche zum Zeitpunkt des Wechsels herrschende Geschwindigkeiten verloren. Blieben diese Geschwindigkeiten erhalten wurde das M"oglichkeiten f"ur ein besseres Level Design er"offnen 
 \end{itemize}
