--- a/DesignDocument/results.tex
+++ b/DesignDocument/results.tex
@@ -78,10 +78,13 @@ Die teilweise verteilte Entwicklung und die gelegentlichen R"uckschritte
 betonten die Notwendigkeit f"ur ein (ebenfalls verteiltes!)
 Versionskontrollsystem\footnote{Subversion est mort. Vive Git!}.
 
-Insgesamt haben wir feststellen m"ussen das die Spiele Entwicklung ein sehr kreativer Prozess ist. Der eigentlichen Implementierung geht ein langer Zeitraum kreativen schaffens zuvor in welchem grundlegende Ideen entwickelt und ausgearbeitet werden.
+Insgesamt haben wir feststellen m"ussen, dass die Spieleentwicklung ein sehr kreativer Prozess ist.
+Der eigentlichen Implementierung geht ein langer Zeitraum kreativen Schaffens zuvor in welchem
+grundlegende Ideen entwickelt und ausgearbeitet werden.
 
-Unsere gr"o"ste H"urde in diesem Prozess war die Findung einer Spielidee. Wir mussten dabei darauf achten das die Spielidee nicht zu einfach, nicht zu schwer und nebenbei noch interessant ist.
-
+Unsere gr"o"ste H"urde in diesem Prozess war die Findung einer Spielidee.
+Wir mussten dabei darauf achten, dass die Spielidee nicht zu einfach, nicht
+zu schwer und nebenbei noch interessant ist.
 %
 \subsection{Ausblick}
 \label{sec:results/future}
@@ -92,9 +95,19 @@ Verbesserungsm"oglichkeiten und Erweiterungspotential:
 \begin{itemize}
 	\item
 		mehr Feedback f"ur den Benutzer (``Game Over''-Bildschirm etc.)
-	\item Bessere Animationen : Obwohl unsere momentane Animationen funktionieren, gibt es auch hier viel raum f"ur Verbesserungen. Zum einen durch bessere Aufnahmen und zum anderen durch bessere Anpassung der Animationen an unseren Avatar und aneinander (zum Beispiel bessere "Uberg"ange zwischen Animationszust"ande)
-	\item Bessere Kamerasteuerung : Im Moment ist einer der Hauptschwierigkeitsfaktoren unseres Spiels die Tatsache, dass die Kamerasteuerung sehr ungelenk ist. Zu w"unschen w"are hier eine freie Kamerasteuerung damit sich der Spieler auf das Level und den Weg zum Ziel konzentrieren kann
-	\item Besseres Level Design : Das momentane Level Design ist sehr einfach und k"onnte noch deutlich verbessert werden
-	\item Mehr Spielkonzepte : Im Moment dreht sich das gesamte Spiel um die Schwerkraftmanipulation. Durch das Einbauen neuer Spielkonzepte (zum Beispiel Gegner, Fallen, etc...) wurde sich der Focus verteilen und damit abwechslungsreicheres Level Design erm"oglichen
-	\item Optimierte Schwerkraft"anderung : Zur Zeit gehen beim Schwerkraftwechsel s"amtliche zum Zeitpunkt des Wechsels herrschende Geschwindigkeiten verloren. Blieben diese Geschwindigkeiten erhalten wurde das M"oglichkeiten f"ur ein besseres Level Design er"offnen 
+	\item Bessere Animationen: Obwohl unsere momentane Animationen funktionieren, gibt es auch hier viel
+		Raum f"ur Verbesserungen. Zum einen durch bessere Aufnahmen und zum anderen durch bessere Anpassung
+		der Animationen an unseren Avatar und aneinander (zum Beispiel bessere "Uberg"ange zwischen
+		Animationszust"anden).
+	\item Bessere Kamerasteuerung: Im Moment ist einer der Hauptschwierigkeitsfaktoren unseres Spiels die
+		Tatsache, dass die Kamerasteuerung sehr ungelenk ist. Zu w"unschen w"are hier eine freie Kamerasteuerung
+		damit sich der Spieler auf das Level und den Weg zum Ziel konzentrieren kann.
+	\item Besseres Level-Design: Das momentane Level-Design ist sehr einfach und k"onnte noch deutlich
+		verbessert werden
+	\item Mehr Spielkonzepte: Im Moment dreht sich das gesamte Spiel um die Schwerkraftmanipulation.
+		Durch das Einbauen neuer Spielkonzepte (zum Beispiel Gegner, Fallen, etc.) w"urde sich der Focus
+		verteilen und damit abwechslungsreicheres Level-Design erm"oglichen.
+	\item Optimierte Schwerkraft"anderung: Zur Zeit gehen beim Schwerkraftwechsel s"amtliche zum Zeitpunkt
+		des Wechsels herrschende Geschwindigkeiten verloren. Blieben diese Geschwindigkeiten erhalten,
+		w"urde dies M"oglichkeiten f"ur ein besseres Level-Design er"offnen.
 \end{itemize}
