...and some interpunct issues. *again*.

--- a/DesignDocument/results.tex
+++ b/DesignDocument/results.tex
@@ -96,11 +96,11 @@ Verbesserungsm"oglichkeiten und Erweiterungspotential:
 	\item
 		mehr Feedback f"ur den Benutzer (``Game Over''-Bildschirm etc.)
 	\item Bessere Animationen: Obwohl unsere momentane Animationen funktionieren, gibt es auch hier viel
-		Raum f"ur Verbesserungen. Zum einen durch bessere Aufnahmen und zum anderen durch bessere Anpassung
+		Raum f"ur Verbesserungen, zum einen durch bessere Aufnahmen und zum anderen durch bessere Anpassung
 		der Animationen an unseren Avatar und aneinander (zum Beispiel bessere "Uberg"ange zwischen
 		Animationszust"anden).
 	\item Bessere Kamerasteuerung: Im Moment ist einer der Hauptschwierigkeitsfaktoren unseres Spiels die
-		Tatsache, dass die Kamerasteuerung sehr ungelenk ist. Zu w"unschen w"are hier eine freie Kamerasteuerung
+		Tatsache, dass die Kamerasteuerung sehr ungelenk ist. Zu w"unschen w"are hier eine freie Kamerasteuerung,
 		damit sich der Spieler auf das Level und den Weg zum Ziel konzentrieren kann.
 	\item Besseres Level-Design: Das momentane Level-Design ist sehr einfach und k"onnte noch deutlich
 		verbessert werden
